tests/inc/out.txt
error: mismatched types: expected int, found string
  ┌─ inp.sml:3:9
  │
3 │ val _ = inc "nope"
  │         ^^^^^^^^^^

typechecking failed
